# drf-owu

./: .env.mysql  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
apps/auto_parks/: models.py  serializers.py  urls.py  views.py
apps/auto_parks/migrations/: 0001_initial.py  0002_autoparkmodel_user.py
apps/cars/: filters.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0002_carmodel_auto_park.py
apps/users/: models.py  serializer.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
cars/: models.py  serializers.py  views.py
cars/migrations/: 0001_initial.py
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/: pagination.py
